[workspace]
members = [
    "crates/mdtui-core",
    "crates/mdtui-markdown",
    "crates/mdtui-render",
    "crates/mdtui-terminal",
    "crates/mdtui-tui",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"

