[package]
name = "mdtui-tui"
version.workspace = true
edition.workspace = true

[dependencies]
base64 = "0.22"
crossterm = "0.28"
fontdb = "0.16"
fontdue = "0.9"
font8x8 = "0.3"
image = { version = "0.25", default-features = false, features = ["png"] }
mdtui-core = { path = "../mdtui-core" }
mdtui-markdown = { path = "../mdtui-markdown" }
mdtui-render = { path = "../mdtui-render" }
mdtui-terminal = { path = "../mdtui-terminal" }
ratatui = "0.29"

[lints]
workspace = true
