[package]
name = "mdtui-tui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "mdtui"
path = "src/main.rs"

[dependencies]
base64 = "0.22"
crossterm = "0.28"
fontdb = "0.16"
fontdue = "0.9"
font8x8 = "0.3"
image = { version = "0.25", default-features = false, features = ["png"] }
mdtui-core = { path = "../mdtui-core" }
mdtui-markdown = { path = "../mdtui-markdown" }
mdtui-render = { path = "../mdtui-render" }
mdtui-terminal = { path = "../mdtui-terminal" }
ratatui = "0.29"

[dev-dependencies]
unicode-width = "0.2"

[package.metadata.deb]
name = "mdtui"
maintainer = "mendrik"
copyright = "2026, mendrik"
license-file = ["../../LICENSE", "0"]
extended-description = "A warm, keyboard-first terminal Markdown editor with semantic rendering, table editing, TOC navigation, and Kitty graphics headlines."
section = "editors"
priority = "optional"
assets = [
  ["target/release/mdtui", "usr/bin/mdtui", "755"],
  ["../../README.md", "usr/share/doc/mdtui/README.md", "644"],
  ["../../LICENSE", "usr/share/doc/mdtui/LICENSE", "644"],
]

[lints]
workspace = true
